--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: Build application
 
-on: [pull_request]
+on: [push, pull_request]
 
 jobs:
   ubuntu-gcc-build:
@@ -26,7 +26,7 @@ jobs:
         mkdir build
         cd build
         cmake -D USE_SEQ=ON -D USE_MPI=OFF -D USE_OMP=ON -D USE_TBB=ON -D USE_STD=ON -D CMAKE_BUILD_TYPE=RELEASE ..
-        cmake --build . --config -j4
+        cmake --build . --target alibekov_m_ccs_complex_matrix_tbb --config -j4
         cd ..
       env:
         CC: gcc-9
@@ -56,7 +56,7 @@ jobs:
         mkdir build
         cd build
         cmake -D USE_SEQ=ON -D USE_MPI=OFF -D USE_OMP=ON -D USE_TBB=ON -D USE_STD=ON -D CMAKE_BUILD_TYPE=RELEASE ..
-        cmake --build . --config -j4
+        cmake --build . --target alibekov_m_ccs_complex_matrix_tbb --config -j4
         cd ..
       env:
         CC: clang-8
@@ -87,7 +87,7 @@ jobs:
         mkdir build
         cd build
         cmake -D USE_SEQ=ON -D USE_MPI=OFF -D USE_OMP=ON -D USE_TBB=ON -D USE_STD=ON -D CMAKE_BUILD_TYPE=RELEASE ..
-        cmake --build . --config -j4
+        cmake --build . --target alibekov_m_ccs_complex_matrix_tbb --config -j4
         cd ..
     - name: Run tests
       run: |
@@ -113,7 +113,7 @@ jobs:
       run: |
         set PATH=C:\Program Files\Microsoft MPI\Bin;%PATH%
         mkdir build
-        cd build && cmake -G "Visual Studio 16 2019" -D USE_SEQ=ON -D USE_MPI=OFF -D USE_OMP=ON -D USE_TBB=ON -D USE_STD=ON -D MPI_C_INCLUDE_PATH:PATH="%MPI_HOME%/Include" -D MPI_C_LIBRARIES:PATH="%MPI_HOME%/Lib/x86/msmpi.lib" -D MPI_CXX_INCLUDE_PATH:PATH="%MPI_HOME%/Include" -D MPI_CXX_LIBRARIES:PATH="%MPI_HOME%/Lib/x86/msmpi.lib" .. -A Win32 && cmake --build .
+        cd build && cmake -G "Visual Studio 16 2019" -D USE_SEQ=ON -D USE_MPI=OFF -D USE_OMP=ON -D USE_TBB=ON -D USE_STD=ON -D MPI_C_INCLUDE_PATH:PATH="%MPI_HOME%/Include" -D MPI_C_LIBRARIES:PATH="%MPI_HOME%/Lib/x86/msmpi.lib" -D MPI_CXX_INCLUDE_PATH:PATH="%MPI_HOME%/Include" -D MPI_CXX_LIBRARIES:PATH="%MPI_HOME%/Lib/x86/msmpi.lib" .. -A Win32 && cmake --build . --target alibekov_m_ccs_complex_matrix_tbb
       env:
         MPI_HOME: C:/Program Files (x86)/Microsoft SDKs/MPI
       shell: cmd
