--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         mkdir build
         cd build
         cmake -D USE_SEQ=ON -D USE_MPI=OFF -D USE_OMP=ON -D USE_TBB=ON -D USE_STD=ON -D CMAKE_BUILD_TYPE=RELEASE ..
-        cmake --build . --target alibekov_m_ccs_complex_matrix_tbb --config -j4
+        cmake --build . --config -j4
         cd ..
       env:
         CC: gcc-9
@@ -56,7 +56,7 @@ jobs:
         mkdir build
         cd build
         cmake -D USE_SEQ=ON -D USE_MPI=OFF -D USE_OMP=ON -D USE_TBB=ON -D USE_STD=ON -D CMAKE_BUILD_TYPE=RELEASE ..
-        cmake --build . --target alibekov_m_ccs_complex_matrix_tbb --config -j4
+        cmake --build . --config -j4
         cd ..
       env:
         CC: clang-8
@@ -87,7 +87,7 @@ jobs:
         mkdir build
         cd build
         cmake -D USE_SEQ=ON -D USE_MPI=OFF -D USE_OMP=ON -D USE_TBB=ON -D USE_STD=ON -D CMAKE_BUILD_TYPE=RELEASE ..
-        cmake --build . --target alibekov_m_ccs_complex_matrix_tbb --config -j4
+        cmake --build . --config -j4
         cd ..
     - name: Run tests
       run: |
